--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "budakbaong2-siren"
+name = "%worker_name%"
 main = "build/worker/shim.mjs"
 compatibility_date = "2024-05-23"
 minify = true
