--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "%worker_name%"
+name = "budakbaong3-siren"
 main = "build/worker/shim.mjs"
 compatibility_date = "2024-05-23"
 minify = true
